Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-Welcome to my portfolio
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Nckathleen.GitHub.io by nckathleen</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-dark.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>Nckathleen.GitHub.io</h1>
+        <p>&quot;Portfolio&quot; site for Kathleen Rauh</p>
+        <p class="view"><a href="https://github.com/nckathleen">View the Project on GitHub <small>nckathleen</small></a></p>
+        <ul>
+          <li class="single"><a href="https://github.com/nckathleen/nckathleen.github.io">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <h3>
+<a id="welcome-the-online-portfolio-of-kathleen-rauh" class="anchor" href="#welcome-the-online-portfolio-of-kathleen-rauh" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome the online portfolio of Kathleen Rauh.</h3>
+
+<p>This repo contains the assignments and final project I did while a Python student at The Iron Yard in Durham, NC.  </p>
+
+<p>I began a career as a management information consultant with what is now know as Accenture upon graduating from the University of Notre Dame.  However, moves for my husband's job and having three children required several years as a stay-at-home mom.  Now I'm back and looking for a job as a junior developer / support engineer / product analyst in the Raleigh-Durham, NC area.</p>
+
+<p>LinkedIn: <a href="https://www.linkedin.com/in/kathleen-rauh-915b11104">https://www.linkedin.com/in/kathleen-rauh-915b11104</a></p>
+      </section>
+    </div>
+    <footer>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    </footer>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    
+  </body>
+</html>
