Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <p>LinkedIn: <a href="https://www.linkedin.com/in/kathleen-rauh-915b11104">https://www.linkedin.com/in/kathleen-rauh-915b11104</a></p>
 
-<p><a href="https://github.com/nckathleen/nckathleen.github.io/blob/master/KathleenRauhResume.docx"> Click here for my resume </a></p>
+<p><a href="https://github.com/nckathleen/nckathleen.github.io/blob/master/KathleenRauhResume.pdf"> Click here for my resume </a></p>
       </section>
     </div>
     <footer>
