Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 
 <p>This repo contains the assignments and final project I did while a Python student at The Iron Yard in Durham, NC.  </p>
 
-<p>I began a career as a management information consultant with what is now know as Accenture upon graduating from the University of Notre Dame.  However, moves for my husband's job and having three children required several years as a stay-at-home mom.  Now I'm back and looking for a job as a junior developer / support engineer / product analyst in the Raleigh-Durham, NC area.</p>
+<p>Upon graduating from the University of Notre Dame, I began a career as a management information consultant with what is now known as Accenture. However, moves for my husband's job and having three children required several years as a stay-at-home mom.  Now I'm back and looking for a job as a junior developer / support engineer / product analyst in the Raleigh-Durham, NC area.</p>
 
 <p>LinkedIn: <a href="https://www.linkedin.com/in/kathleen-rauh-915b11104">https://www.linkedin.com/in/kathleen-rauh-915b11104</a></p>
 
-<p><a href="https://github.com/nckathleen/nckathleen.github.io/blob/master/KathleenRauhResume.pdf"> Click here for my resume </a></p>
+<p>My resume can be found<a href="https://github.com/nckathleen/nckathleen.github.io/blob/master/KathleenRauhResume.pdf"> here </a></p>
       </section>
     </div>
     <footer>
